@@ -7,7 +7,6 @@ import com.standard.coffeeshop.utils.functions.DtoToDomainAdapter;
 import org.springframework.beans.BeanUtils;
 
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 public class PrintReceiptDtoToPrintReceiptAdapter implements Function<PrintReceiptDto, PrintReceipt> {
 
@@ -18,7 +17,7 @@ public class PrintReceiptDtoToPrintReceiptAdapter implements Function<PrintRecei
         domain.setReceiptItems(printReceiptDto
                                 .getReceiptItems().stream()
                                     .map(DtoToDomainAdapter.printReceiptItemDtoToPrintReceiptItemAdapter)
-                                        .collect(Collectors.toList()));
+                                        .toList());
         return domain;
     }
 
